# skal

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  SConstruct  TODO.md  TODO.py  autodetectplf.py  install.py  integration-tests.py  make.mk  mkdoc.py  routing.md  run_unit_tests.py
experiments/condvar_vs_pipe/: mt-condvar.c  mt-pipe.c
experiments/malloc-limit/: malloc-limit.c
experiments/skal-vs-asio/: daytime-skal-server.c
include/skal/: alarm.hpp  blob.hpp  cfg.hpp  error.hpp  executor.hpp  global.hpp  group.hpp  log.hpp  msg.hpp  net.hpp  policy.hpp  queue.hpp  scheduler.hpp  semaphore.hpp  skal.hpp  util.hpp  worker.hpp
include/skal/detail/: cfg.hpp  domain.hpp  job.hpp  log.hpp  msg.hpp  queue.hpp  safe-mutex.hpp  semaphore.hpp  thread-specific.hpp  util.hpp
lib/: SConscript
lib/bindings/cpp/include/: skal-cpp.hpp
lib/bindings/cpp/src/: skal-cpp.cpp
lib/common/include/: skal-common.h  skalcommon.h
lib/common/src/: skal-common.c  skalcommon.c
lib/common/test/: test-common.c
lib/daemon/src/: skald.c
lib/net/: SConscript
lib/net/include/: skal-net.h
lib/net/src/: skal-net.c  skal-net.h
lib/net/test/: test-net.c  unittest-basic.c
lib/plf/x64-linux/: plfsettings.py
lib/plf/x64-linux/include/: skal-cfg.h  skal-cfg.hpp  skal-plf.h  skalcfg.h  skalplf.h
lib/plf/x64-linux/src/: rttestmain.c  skal-plf.c  skalplf.c
lib/plf/x64-linux/test/: test-plf.c  unittest.c
lib/skal/: SConscript
lib/skal/include/: skal-alarm.hpp  skal-blob.hpp  skal-cfg.hpp  skal-error.hpp  skal-log.hpp  skal-msg.hpp  skal-queue.hpp  skal.h
lib/skal/include/detail/: skal-msg-detail.hpp  skal-queue.hpp  skal-thread-specific.hpp  skal-util.hpp
lib/skal/src/: skal-alarm.c  skal-alarm.cpp  skal-alarm.h  skal-blob.c  skal-blob.cpp  skal-blob.h  skal-error.cpp  skal-log.cpp  skal-msg.c  skal-msg.cpp  skal-msg.h  skal-msg.proto  skal-proto.c  skal-proto.h  skal-queue.c  skal-queue.cpp  skal-queue.h  skal-thread-specific.cpp  skal-thread.c  skal-thread.h  skal-util.cpp  skal-worker.cpp  skal.c
lib/skal/test/: test-alarm.c  test-blob.c  test-msg.c  test-queue.c  test-thread.c  unittest-alarm.c  unittest-blob.c  unittest-msg.c  unittest-queue.c  unittest-thread.c
lib/skald/: SConscript
lib/skald/src/: main.c  skald.c  skald.h
skald/: skald.c  skald.h
skald/src/: main.c  skald-alarm.c  skald-alarm.h  skald.c  skald.h
skald/test/: reader.c  test-skald.c  unittest-skald.c  writer.c
src/: SConscript
src/common/: SConscript  skal-cfg.hpp
src/common/include/: skalcommon.h
src/common/src/: skalcommon.c
src/common/test/: unittest.c
src/libskal/: alarm.cpp  blob.cpp  domain.cpp  executor.cpp  job.cpp  log.cpp  msg.cpp  msg.proto  queue.cpp  skal-blob.cpp  skal.cpp  thread-specific.cpp  util.cpp  worker.cpp
src/libskal/detail/: queue.hpp
src/libskal/internal/: executor.hpp  job.hpp  queue.hpp
src/net/: SConscript
src/net/include/: skal-net.h
src/net/src/: skal-net.c
src/net/test/: unittest-basic.c
src/plf/x64-linux/: SConscript
src/plf/x64-linux/include/: skalcfg.h  skalplf.h
src/plf/x64-linux/src/: skalplf.c
src/plf/x64-linux/test/: unittest.c
src/skal/: SConscript  alarm.cpp  blob.cpp  date.h  domain.cpp  error.cpp  executor.cpp  global.cpp  group.cpp  log.cpp  msg.cpp  msg.proto  net.cpp  queue.cpp  scheduler.cpp  skal.cpp  util.cpp  worker.cpp
src/skal/include/: skal.h
src/skal/src/: skal-blob.c  skal-blob.h  skal-msg.c  skal-msg.h  skal-queue.c  skal-queue.h  skal-thread.c  skal-thread.h
src/skal/test/: unittest-blob.c  unittest-msg.c  unittest-queue.c  unittest-thread.c
src/skald/: main.cpp  skald.cpp  skald.hpp
unit-test/: test-blob.cpp  test-executor.cpp  test-group.cpp  test-msg.cpp  test-queue.cpp  test-util.cpp  test-worker.cpp
utils/: skal-post.c  skal-trace.cpp
